// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should fail on invalid time pattern 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "content": "\`❌ Invalid input format. Examples: |2ep|, |1h3m|. See /help log for more info.\`",
        "ephemeral": true,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`should save log 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "embeds": [
          {
            "color": 14024703,
            "description": "1 point/min → +10 points",
            "fields": [
              {
                "inline": true,
                "name": "📖 Title",
                "value": "Test Title",
              },
              {
                "inline": true,
                "name": "📝 Notes",
                "value": "Some notes here",
              },
            ],
            "footer": {
              "icon_url": "http://example.com/image.jpg",
              "text": "Keep up the great immersion!",
            },
            "thumbnail": {
              "url": "http://example.com/image.jpg",
            },
            "timestamp": "TIMESTAMP",
            "title": "🎉 test Logged 10 Minutes of Watchtime!",
          },
        ],
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`should save log 2`] = `
{
  "options": {
    "getString": [MockFunction spy] {
      "calls": [
        [
          "medium",
        ],
        [
          "amount",
        ],
        [
          "title",
        ],
        [
          "notes",
        ],
        [
          "episode_length",
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": "Watchtime",
        },
        {
          "type": "return",
          "value": "10m",
        },
        {
          "type": "return",
          "value": "Test Title",
        },
        {
          "type": "return",
          "value": "Some notes here",
        },
        {
          "type": "return",
          "value": "30",
        },
      ],
    },
  },
  "reply": [MockFunction spy] {
    "calls": [
      [
        {
          "embeds": [
            {
              "color": 14024703,
              "description": "1 point/min → +10 points",
              "fields": [
                {
                  "inline": true,
                  "name": "📖 Title",
                  "value": "Test Title",
                },
                {
                  "inline": true,
                  "name": "📝 Notes",
                  "value": "Some notes here",
                },
              ],
              "footer": {
                "icon_url": "http://example.com/image.jpg",
                "text": "Keep up the great immersion!",
              },
              "thumbnail": {
                "url": "http://example.com/image.jpg",
              },
              "timestamp": "TIMESTAMP",
              "title": "🎉 test Logged 10 Minutes of Watchtime!",
            },
          ],
        },
      ],
    ],
    "results": [
      {
        "type": "return",
        "value": undefined,
      },
    ],
  },
  "user": {
    "displayAvatarURL": [Function],
    "displayName": "test",
  },
}
`;
